--- a/FrameWork.Interfaces/FrameWork.Interfaces.nuspec
+++ b/FrameWork.Interfaces/FrameWork.Interfaces.nuspec
@@ -2,14 +2,16 @@
 <package >
   <metadata>
     <id>FrameWork.Interfaces</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <authors>Jonathon Cwik</authors>
     <description>Base Interfaces for FrameWork</description>
     <releaseNotes>Init</releaseNotes>
     <dependencies>
     </dependencies>
+    <icon>.\images\icon.png</icon>
   </metadata>
   <files>
     <file src="bin\Release\netstandard2.0\*" target="lib\netstandard2.0"/>
+    <file src="..\icon.png" target="images\" />
   </files>
 </package>
