--- a/FrameWork.Serialization.Protobuf/FrameWork.Serialization.Protobuf.nuspec
+++ b/FrameWork.Serialization.Protobuf/FrameWork.Serialization.Protobuf.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>FrameWork.Serialization.Protobuf</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <authors>Jonathon Cwik</authors>
     <description>Protobuf Implementation for FrameWork</description>
     <releaseNotes>Init</releaseNotes>
@@ -10,8 +10,13 @@
       <dependency id="FrameWork.Interfaces" version="[1.0.0,2)" />
       <dependency id="protobuf-net" version="[3.0.101,4)" />
     </dependencies>
+    <icon>.\images\icon.png</icon>
+    <readme>Readme.md</readme>
+    <tags>Protobuf, Serialize, Deserialize, Bytes</tags>
   </metadata>
   <files>
     <file src="bin\Release\netstandard2.0\*" target="lib\netstandard2.0"/>
+    <file src=".\Readme.md" target=".\" />
+    <file src="..\icon.png" target="images\" />
   </files>
 </package>
