remove nuspec because I guess I'm super old

--- a/FrameWork.EventBus.Rabbit/FrameWork.EventBus.Rabbit.csproj
+++ b/FrameWork.EventBus.Rabbit/FrameWork.EventBus.Rabbit.csproj
@@ -2,17 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <LangVersion>latest</LangVersion>
+    <Authors>Jonathon Cwik</Authors>
+    <Description>RabbitMQ EventBus Implementation for FrameWork</Description>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <PackageTags>Rabbit, RabbitMQ, Event, Bus, Topic, Message</PackageTags>
+    <PackageProjectUrl>https://github.com/JonathonCwik/FrameWork/tree/main/FrameWork.EventBus.Rabbit</PackageProjectUrl>
   </PropertyGroup>
-
   <ItemGroup>
+    <None Include="..\icon.png" Pack="true" PackagePath="\"/>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
-
   <ItemGroup>
+    <None Include=".\Readme.md" Pack="true" PackagePath="\"/>
     <ProjectReference Include="..\FrameWork.Interfaces\FrameWork.Interfaces.csproj" />
   </ItemGroup>
-
 </Project>
